--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fbds",
   "version": "1.0.0",
   "description": "Free Body Diagram toolkit",
-  "main": "fbds.mjs",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
